--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@hookform/resolvers": "^3.0.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.4",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
+    "react-jwt": "^1.1.8",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
