--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-jwt": "^1.1.8",
     "react-router-dom": "^6.9.0",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "yup": "^1.0.2"
